# lazyrec

./: .gitignore  CLAUDE.md  manual-test.md  package-lock.json  package.json
.beads/: metadata.json
.claude/: settings.json
.claude/commands/: cargo-check.md  cargo-test.md  component.md  debug.md  hooks.md  lint.md  npm-scripts.md  refactor.md  state-management.md  tauri-dev.md  test.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: capture.rs  coordinates.rs  easing.rs  encoder.rs  evaluator.rs  generators.rs  input.rs  keyframe.rs  mod.rs  permissions.rs  project.rs  recorder.rs  render.rs  timeline.rs  track.rs
src-tauri/windows/: hooks.nsh
