[package]
name = "lazyrec"
version = "0.3.19"
description = "Cross-platform screen recorder with auto-zoom, timeline editing, and post-production effects"
authors = ["opariffazman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lazyrec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
dirs = "6"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
log = "0.4"

# Video encoding/decoding via FFmpeg (requires FFmpeg libs installed)
ffmpeg-next = { version = "7", optional = true }

# Windows-only: screen capture and input hooks
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

